Experimenting with min-width and preventing overflows

--- a/source/assets/stylesheets/global.scss
+++ b/source/assets/stylesheets/global.scss
@@ -206,6 +206,7 @@ body {
     margin: 5px;
     padding: 5px;
     width: 99%;
+    min-width: 50%;
     height: $wrap-height;
 
     /* appearance */
@@ -215,6 +216,7 @@ body {
     .title {
       /* position */
       width: 99%;
+      min-width: 50%;
       height: 20%;
       margin: inherit;
       padding: inherit;
@@ -245,8 +247,10 @@ body {
 
     .descr-and-links {
       /* position */
+      display: inline;
       float: right;
-      width: 78%;
+      width: 76%;
+      min-width: 38%;
       height: 75%;
       margin: $wrap-margin;
       padding: $wrap-padding;
@@ -260,6 +264,7 @@ body {
           /* position */
           float: left;
           width: 76%;
+          min-width: 38%;
           height: 95%;
           margin: $wrap-margin $wrap-margin ($wrap-margin + 5px) $wrap-margin;
           padding: $wrap-padding + 5px; 
@@ -276,6 +281,7 @@ body {
       .description {
         /* position */
         width: 99%;
+        min-width: 50%;
         height: 65%;
         margin: $wrap-margin $wrap-margin ($wrap-margin + 5px) $wrap-margin;
         padding: $wrap-padding; 
@@ -288,6 +294,7 @@ body {
           /* position */
           float: left;
           width: 76%;
+          min-width: 38%;
           height: 95%;
           margin: $wrap-margin $wrap-margin ($wrap-margin + 5px) $wrap-margin;
           padding: $wrap-padding + 5px; 
